--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-numpy==2.0.0
-streamlit== 1.36.0
-seaborn== 0.12.2
-matplotlib== 3.7.1
-plotly==5.9.0
-pandas==1.5.3
-scikit-learn==1.1.3
-
+numpy>=2.1.0
+pandas>=2.1.0
+scikit-learn>=1.4
+matplotlib
+seaborn
+plotly
+streamlit
